[package]
name = "MeetNote2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.15.2"
hound = "3.5.1"
image = "0.24.7"

tao-core-video-sys = "0.2.0"
core-graphics = "0.23.1"
#screencapturekit = { git = "https://github.com/svtlabs/screencapturekit-rs.git", rev = "f2327fc1206fc7f32918aed3fea2de0775b8ac36", version = "*" }
screencapturekit = { git = "https://github.com/clearlysid/screencapturekit-rs.git", rev = "56a6708", version = "*" }
chrono = { version = "0.4.31", features = [] }
clap = { version = "4.4.10", features = ["derive"] }
ogg = "0.9.0"
lewton = "0.10.2"
anyhow = { version = "1.0.75", features = [] }
