[package]
name = "meetnote2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-message", "dialog-confirm", "path-all", "fs-all", "system-tray", "window-create", "window-close", "notification-all", "shell-open"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"

dirs = "5.0.1"
dirs-sys = "0.4.1"

walkdir = "2.4.0"

log = { version = "0.4.20", features = [] }
simplelog = "0.12.1"

anyhow = { version = "1.0.79", features = [] }

reqwest = { version = "0.11.24", features = ["blocking", "multipart", "json"] }

chrono = { version = "0.4.33", features = [] }

# sound
cpal = "0.15.2"
hound = "3.5.1"

glob = "0.3.1"

# screencapturekit
core-graphics = "0.23.1"
screencapturekit = "0.2.5"
config = "0.14.0"
time = "0.3.34"
tempfile = { version = "3.9.0", features = [] }
uuid = { version = "1.7.0", features = ["v4"] }
regex = "1.10.3"
base64 = "0.21.7"

lindera-tokenizer = { version = "0.27.2", features = ["ipadic"] }
lindera-analyzer = { version = "0.27.2", features = ["ipadic", "ipadic-filter"] }
lindera-dictionary = "0.27.2"
lindera-core = "0.27.2"
lazy_static = "1.4.0"
tiktoken-rs = "0.5.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
