[package]
name = "meetnote2"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [ "dialog-message", "dialog-confirm", "path-all", "fs-all", "system-tray", "window-create", "window-close", "notification-all", "shell-open"] }

serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"

dirs = "5.0.1"
dirs-sys = "0.4.1"

walkdir = "2.5.0"

log = { version = "0.4.21", features = [] }
simplelog = "0.12.2"

anyhow = { version = "1.0.82", features = [] }

reqwest = { version = "0.12.4", features = ["blocking", "multipart", "json"] }

chrono = { version = "0.4.38", features = [] }

# sound
cpal = "0.15.3"
hound = "3.5.1"

glob = "0.3.1"

# screencapturekit
core-graphics = "0.23.2"
screencapturekit = "0.2.8"
config = "0.14.0"
time = "0.3.36"
tempfile = { version = "3.10.1", features = [] }
uuid = { version = "1.8.0", features = ["v4"] }
regex = "1.10.4"
base64 = "0.22.1"

lindera-tokenizer = { version = "0.32.0", features = ["ipadic"] }
lindera-analyzer = { version = "0.31.0", features = ["ipadic", "filter"] }
lindera-dictionary = "0.32.0"
lindera-core = "0.32.0"
lazy_static = "1.4.0"
tiktoken-rs = "0.5.8"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
